<resources>
    <string name="app_name">Painter</string>
    <string name="rubber">Rubber</string>
    <string name="choose_color">Choose Color</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="choose_size">Choose size</string>
    <string name="size">Size</string>
    <string name="clear">Clear</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="picture_name">Picture Name</string>
    <string name="save_title">Enter picture name:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or_text">Or</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in_as_guest">Log in As Guest</string>
    <string name="hello">Hello, </string>
    <string name="login_enter">Enter your login</string>
    <string name="password_enter">Enter password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="register">Register</string>
    <string name="scaling">Scaling</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="alpha">ALPHA</string>
    <string name="red">RED</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="paint">Paint</string>
    <string name="solid">Solid</string>
    <string name="outer">Outer</string>
    <string name="inner">Inner</string>
    <string name="normal">Normal</string>
    <string name="none">None</string>
</resources>