<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/picked_color"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="50dp"
                android:text="@string/alpha"/>
        <com.google.android.material.slider.Slider
            android:id="@+id/alpha_slider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="50dp"
                android:text="@string/red"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/red_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="50dp"
                android:text="@string/green"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/green_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="50dp"
                android:text="@string/blue"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/blue_slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >
        <!-- Top Row -->
        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/brown_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FF660000"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FF660000" />

            <ImageButton
                android:id="@+id/red_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FFFF0000"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FFFF0000" />

            <ImageButton
                android:id="@+id/orange_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FFFF6600"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FFFF6600" />

            <ImageButton
                android:id="@+id/yellow_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FFFFCC00"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FFFFCC00" />





        </LinearLayout>
        <!-- Bottom Row -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/blue_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FF0000FF"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FF0000FF" />

            <ImageButton
                android:id="@+id/purple_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FF990099"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FF990099" />

            <ImageButton
                android:id="@+id/pink_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FFFF6666"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FFFF6666" />

            <ImageButton
                android:id="@+id/white_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FFFFFFFF" />




        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/light_blue_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FF009999"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FF009999" />

            <ImageButton
                android:id="@+id/green_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FF009900"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FF009900" />

            <ImageButton
                android:id="@+id/gray_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FF787878"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FF787878" />

            <ImageButton
                android:id="@+id/black_button"
                android:layout_width="@dimen/large_brush"
                android:layout_height="@dimen/large_brush"
                android:layout_margin="10dp"
                android:background="#FF000000"
                android:contentDescription="@string/paint"
                android:src="@drawable/paint"
                android:tag="#FF000000" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>